--- a/styles.css
+++ b/styles.css
@@ -1,86 +1,70 @@
-body {
+*{
     margin: 0;
-    background: #faf3f6;
-
+    padding: 0;
 }
 
-/* HEADER */
-#header {
-    height: 30vh;
+/* this should not be necessary but for now it works */
+body{
+
+    height: 90vh;
     width: 100%;
-    background-image:url("./DEi3D0rUQAAl1xe (1).jpg");
+    background-image:url("./img/DEi3D0rUQAAl1xe\ \(1\).jpg");
+
+    background-size: cover;
+}
+
+
+
+/* HEADER */
+header{
+    position: absolute;
+    height: 90vh;
+    width: 100%;
+    background-image:url("./img/DEi3D0rUQAAl1xe\ \(1\).jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-#header .change-cover-button {
-    font-family: sans-serif;
-    font-size: 14px;
-    color: none;
-    background:none;
 
-    display: flex;
-    float: right;
-    position: relative;
-    margin: 25vh 8vh;
-    border: none;
-}
-
-#header .change-cover-button:hover{
-    background-color: rgb(58, 41, 41);
-    background:rgb(217, 194, 194); 
-}
-/* MY NOTES*/
-
-#my-notes{
-    font-family: sans-serif;
-    font-size: 16px;
-    color: rgb(139, 136, 136);
-    display: flex;
-    margin: 30px 10px 15px 10px;
-    justify-content: space-between;
-    align-items: center;
-}
-#my-notes .add-note {
+/* ADD NOTE BUTTON*/
+#add-note {
     width: 60px;
     height: 60px;
+    position: relative;
     border: none;
     outline: none;
-    background: rgba(156, 79, 79, 0.1);
-    border-radius: 20px;
-    font-size: 40px;
+    background: rgb(203, 195, 195);
+    border-radius: 16px;
+    text-align: center;
+    font-size: 50px;
     color: rgba(0, 0, 0, 0.3);
     cursor: pointer;
 }
-#my-notes .add-note:hover{
-    background: rgba(0, 0, 0, 0.2);
+#add-note:hover{
+    background: rgb(103, 103, 103);
 }
 
-hr{
-    width: 100%;
-    color: rgb(139, 136, 136);
-    opacity: 0.3;
-}
-
-/* NOTES SECTION */
+/* NOTES SECTION CONTAINER*/
 
 #notes-section {
     display: grid;
     grid-template-columns: repeat(auto-fill, 200px);
     padding: 24px;
     gap: 24px;
+    justify-content: center;
 }
 
+/* NOTES */
 .note{
+    position:relative;
     height: 200px;
     box-sizing: border-box;
     padding: 16px;
     border: none;
     border-radius: 10px;
-    box-shadow: 0 0 7px rgb(86, 77, 77);
-    resize: none;
+
+
     font-family: sans-serif;
     font-size: 16px;
     color: rgb(188, 184, 184);
 }
-
