--- a/styles.css
+++ b/styles.css
@@ -3,28 +3,17 @@
     padding: 0;
 }
 
-/* this should not be necessary but for now it works */
-body {
-
-    height: 90vh;
-    width: 100%;
+html {
     background-image: url("./img/DEi3D0rUQAAl1xe\ \(1\).jpg");
-
     background-size: cover;
-}
-
-
-
-/* HEADER */
-header {
-    position: absolute;
-    height: 90vh;
-    width: 100%;
-    background-image: url("./img/DEi3D0rUQAAl1xe\ \(1\).jpg");
     background-repeat: no-repeat;
-    background-size: cover;
+    background-position: center;
 }
 
+body {
+    width: 100%;
+    height: 100%;
+}
 
 /* ADD NOTE BUTTON*/
 #add-note {
@@ -35,6 +24,7 @@ header {
     outline: none;
     background: rgb(203, 195, 195);
     border-radius: 16px;
+    transition: .2s all ease-in-out;
     text-align: center;
     font-size: 50px;
     color: rgba(0, 0, 0, 0.3);
@@ -42,17 +32,24 @@ header {
 }
 
 #add-note:hover {
+    color: #fff;
     background: rgb(103, 103, 103);
+    scale: 1.05;
 }
 
 /* NOTES SECTION CONTAINER*/
-
 #notes-section {
     display: grid;
+    max-height: 90vh;
+    overflow-y: scroll;
     grid-template-columns: repeat(auto-fill, 200px);
     padding: 24px;
     gap: 24px;
     justify-content: center;
+}
+
+#notes-section::-webkit-scrollbar {
+    display: none;
 }
 
 /* NOTES */
