--- a/styles.css
+++ b/styles.css
@@ -4,15 +4,7 @@
 }
 
 html {
-    background-image: url("./img/DEi3D0rUQAAl1xe\ \(1\).jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-body {
-    width: 100%;
-    height: 100%;
+    background-image: url('/img/dark-abstract-black-minimal-4k-q0-1920x1080.jpg');
 }
 
 /* ADD NOTE BUTTON*/
@@ -22,7 +14,7 @@ body {
     position: relative;
     border: none;
     outline: none;
-    background: rgb(203, 195, 195);
+    background: rgb(238, 231, 231);
     border-radius: 16px;
     transition: .2s all ease-in-out;
     text-align: center;
@@ -33,7 +25,7 @@ body {
 
 #add-note:hover {
     color: #fff;
-    background: rgb(103, 103, 103);
+    background: rgb(46, 46, 46);
     scale: 1.05;
 }
 
@@ -60,9 +52,12 @@ body {
     padding: 16px;
     border: none;
     border-radius: 10px;
-
-
     font-family: sans-serif;
     font-size: 16px;
     color: rgb(188, 184, 184);
+    transition: .3s all ease-in-out;
+}
+
+.note:hover {
+    scale: 1.05;
 }
